apps/base/locust/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: locust
  namespace: dev
spec:
  selector:
    app: locust
  ports:
    - name: http
      port: 80
      targetPort: 8089
