apps/base/locust/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: locust
  namespace: dev
spec:
  ingressClassName: nginx
  rules:
    - host: locust.cluster.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: locust
                port:
                  name: http
